Fixed width,height due to scrollbars. Also using window.animationFrame now instead of timer to allow maximum refresh rate.

--- a/web/styles.css
+++ b/web/styles.css
@@ -1,11 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
-html, body, .stage--fullscreen {
+html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     border: 0;
+    overflow: hidden;
+}
+
+.stage--fullscreen {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: none;
 }
 
 #tool-r {
